# CY_Truck-SOUPPAYA-Alban-LANCE-RICHARDOT-Mathis-MESBAHY-R-mi

./: README.md  fichiershell  fichiertc  fonction.h  makefile  pro1.sh  s.c  t.c  t2.c  t_1.c  traitement1.gn  traitement2.gn  traitementL.gnu  traitementS.gn  traitementT.gn
Gnuplots/: traitement1.gn  traitement2.gn  traitementL.gnu  traitementS.gn  traitementT.gn
progc/: exec  fonctionS.c  fonctionT.c  main.c
temps/: resultatL.csv
