set terminal png size 800,800
set output 'resultatd2.png'
set style data histograms
set style fill solid border -1
set y2label 'Kilomètres parcourus'
set ylabel 'Les 10 meilleurs chauffeurs (Distance)'
set xlabel 'Nom du Chauffeur'
set xtics rotate
set ytics rotate
set y2tics rotate
unset ytics ; set y2tics mirror
set datafile separator ';'
plot 'demo/resultatd2.csv' using 1:xticlabels(2) axes x1y2 notitle
